# home-improvement-lead-gen

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  DATA_FLOW.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY_PROTOCOL.md  check_unified.py  crm_sync.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  enrichment.py  follow_up_automator.py  leadgen_orchestrator.py  main.py  package.json  publish.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sales_pipeline.py  scoring_llm.py  smoke_test.py  spokeo_integration.py
.github/workflows/: ci.yml  deploy.yml
.lpls/: BASELINE.md
.lpls/baseline/snapshot-v1/: .env.example  AUDIT_REPORT.md  LEAD_GEN_ECOSYSTEM_STATUS.md  README.md  __init__.py  base.py  capture.py  connectors.json  crm_push.py  crmx.py  exa.py  export.py  index.html  lead_scout.py  leadgen_orchestrator.py  main.py  merger.py  outreach_writer.py  perplexity.py  propstream_integration.py  requirements.txt  router.py  run.py  scoring.py  scoring_llm.py
.lpls/baseline/snapshot-v1/crm_plus/: crm_plus_routes.py  crm_sales.py  crm_tools.py
.lpls/baseline/snapshot-v1/desktop/: README.md  index.html  package.json  vite.config.js
.lpls/baseline/snapshot-v1/desktop/src/: main.js  styles.css
.lpls/baseline/snapshot-v1/desktop/src-tauri/: tauri.conf.json
.lpls/baseline/snapshot-v1/engine/: ads.py  business_config.py  scheduler.py  scout.py
.lpls/baseline/snapshot-v1/sales_pack/: lead_flow.json  lead_schema.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
crm_plus/: CrmPlusCommandCenter.kt  __init__.py  crm_plus_routes.py  crm_support.py  crm_tools.py  crmx.py
data/: .vault_key  lead_gen.db
deploy/: .env.example  docker-compose.yml  nginx.conf  setup.sh  update.sh
deploy/cloudflare/: README.md  config.yml  docker-compose.yml
deploy/cloudflare/scripts/: setup-tunnel.sh
deploy/nginx/: nginx.conf
desktop/: UPDATER_SETUP.md  index.html  package-lock.json
desktop/src/: main.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
electron-shell/: main.js  package.json  preload.js
electron-shell/renderer/: index.html  styles.css
engine/: __init__.py  ad_apis.py  auth.py  business_config.py  capture.py  crm_push.py  database.py  key_vault.py  landing.py  nurture.py  persistence.py  router.py  scheduler.py  scout.py  stripe_integration.py
engine/enrichment/: __init__.py  apollo_enricher.py  base.py  exa_enricher.py  llm_enricher.py  orchestrator.py
engine/growth_portal/: __init__.py  modules.py  portal.py  tracking.py
engine/messaging/: __init__.py  orchestrator.py  providers.py
engine/search/: exa.py  perplexity.py
engine/trades/: __init__.py  base.py  convert.py  discovery.py  platforms.py  scoring.py  trades.py
leadgen-workflows/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
sales_pack/: automation_templates.json  manifest.json
scripts/: health_check.py  key_wizard.py  pre-commit-check.sh  seed_trades.py  validate_env.py
static/: app.html  deploy.sh  index.html  landing.html  manifest.json  vault.html
static/templates/: landing_base.html  thank-you.html
static/widgets/: lead-capture.js
tests/: conftest.py  test_api.py  test_crm_plus.py  test_engine.py  test_growth_portal.py  test_integration_hooks.py
(+35 files in other folders)
