[package]
name = "leadgen-pro-desktop"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = ["shell-open", "dialog-save", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tauri-plugin-updater = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
